# DarkSpace

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/source/: CMakeLists.txt  DarkSpace.rc  IconMaker.cmake  client.cpp  client.h  icons.qrc  main.cpp
client/source/AppIcons/: DarkSpace.rc
client/source/Client/: CMakeLists.txt  client.cpp  client.h
client/source/Client/Gui/ClientPage/: ChatListView.qml  CorrespondenceScene.qml  InputMessageField.qml  Message.qml
client/source/Client/Gui/Controllers/: SwitchPagesController.qml
client/source/Client/Gui/LoginPage/: LoginPage.qml  SignUpPage.qml  loginPageResource.qrc
client/source/Client/Gui/SharedComponents/: InputField.qml
client/source/Gui/: main_gui.qml  qml_resource.qrc
client/source/Gui/ClientPage/: ChatBlock.qml  ChatListView.qml  ClientPage.qml  ControlBar.qml  CorrespondenceScene.qml  CorrespondenceView.qml  Message.qml  ReceiverInfoBar.qml
client/source/Gui/ClientPage/ChatListView/: ChatBlock.qml  ChatListView.qml
client/source/Gui/ClientPage/CorrespondenceView/: CorrespondenceScene.qml  CorrespondenceView.qml  ImageMessage.qml  InputMessageField.qml
client/source/Gui/Controllers/: InfoPage.qml  SwitchPagesController.qml
client/source/Gui/DialogWindows/: FileDialogExplorer.qml  NewChatDialogWindow.qml
client/source/Gui/LoginPage/: LoginPage.qml  SignUpPage.qml
client/source/program/: CMakeLists.txt
cmake/: deploy.cmake
general-lib/: CMakeLists.txt
general-lib/source/: CMakeLists.txt
general-lib/source/ClientData/: CMakeLists.txt  clientdata.cpp  clientdata.h
general-lib/source/Message/: IMessage.cpp  IMessage.h
general-lib/source/Qt/: CMakeLists.txt
server/: CMakeLists.txt
server/source/DBManager/: CMakeLists.txt  dbmanager.cpp  dbmanager.h
server/source/Program/: CMakeLists.txt  main.cpp
server/source/Server/: CMakeLists.txt  server.cpp  server.h
